--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>citr v9 - Papre Gino's</title>
+    <link rel="stylesheet" href="/public/style.css" />
   </head>
   <body>
     <div id="root">not rendered</div>
-    <script type="module" src="src/App.jsx"></script>
+    <script type="module" src="src/components/App.jsx"></script>
   </body>
 </html>
